# Algorithm

./: CMakeLists.txt  LICENCE.txt  README.md  main.c
algorithm/sort/: CMakeLists.txt
algorithm/sort/include/: sort.h
algorithm/sort/src/: sort.c
data_structure/double_linked_list/: CMakeLists.txt
data_structure/double_linked_list/include/: double_linked_list.h
data_structure/double_linked_list/src/: double_linked_list.c
data_structure/heap/: CMakeLists.txt
data_structure/heap/include/: heap.h
data_structure/heap/src/: heap.c
util/: CMakeLists.txt
util/include/: util.h
util/src/: util.c
